media/styles/calendar.css
.month-name {
	font-size: 1.4em;
	line-height: .9em;
	margin-bottom:3px;
}
.hr {
	height: 1px;
	background-color: #C0C9EB;
	margin-bottom: 10px;
}
table {
	font-size: 12px;
	font-family: Verdana;
	width: 100%;
	border-collapse: collapse;
}
table td {
	vertical-align: top;
}
.menu {
	width: 200px;
	border-right: 1px solid #C0C9EB;
}
.menu-item {
	color: white;
	margin: 1px 0;
	padding: 5px;
}
.menu .label {
	width: 85px;
}
.month {
	font-size: 12px;
	font-family: Verdana;
}
.month .header div {
	float: left;
	width: 14%;
	border: 1px solid white;
	text-align: center;
}
.month .weekdays {
	border-right: none;
	border-bottom: none;
}
.month .weekdays .today {
	background-color: #FFE;
}
.month .weekdays .today .numeral {
	background-color: #FFD;
}
.month .week {
	min-width: 700px;
	height: 100px;
}
/* top border on calendar */
.month .week:first-child .day {
	border-top: 1px solid #C0C9EB;
}
/* left border on calendar */
.month .day:first-child {
	border-left: 1px solid #C0C9EB;
}
.month .day .numeral {
	background-color:#E1E7FF;
	text-align: right;
	padding-right: 10px;
}
.month .day {
	width: 14.285714286%;
	width: 14%;
	height: 120px;
	height: 100%;
	float: left;
	border-right: 1px solid #C0C9EB;
	border-bottom: 1px solid #C0C9EB;
	overflow: hidden;
}
.day .stock {
	color: white;
	text-align: center;
	padding: 5px;
}
.clear {
	clear: both;
}
.today-link {
	float: left;
	margin: 0 10px;
}
.month-nav {
	float: left;
	margin-right: 10px;
}
.prev, .next {
	color: white;
	font-size: 1em;
	line-height: 1em;
	text-decoration: none;
	background-color: #82A5FF;
	padding: 0 5px;
}
.menu-counter {
	width: 15px;
	float: left;
	text-align: right;
	margin-top: 6px;
	margin-right: 3px;
}
.mode-wrap {
	top: 10px;
	right: 20px;
	position: absolute;
}
.income-wrap {
	background-color: #e1e6ff;
	padding: 10px 5px;
	margin-bottom: 3px;
	border-bottom: #82a6ff 1px solid;
}
.income-wrap input {
	width: 90%;
}

.income-wrap .daily-income,
.income-wrap .hourly-income {
	color: #4784a3;
	font-size: .8em;
}
.totals {
	background-color: #e1e6ff;
	padding: 10px 5px;
	border-bottom: #82a6ff 1px solid;
	margin-top: 3px;
}
.totals .label {
	float: left;
	text-align: right;
	margin-right: 10px;
	width: 110px;
}




@media (max-width: 480px) {

	.signed-out {
		font-size: 10pt;
		margin: 20px 20px 0 20px;
		text-align: center;
	}

	.sign-in-wrap {
		background-color: white;
		padding: 15px 15px 15px;
		margin: 20px 20px 15px;

		-webkit-border-radius: 5px;
		-moz-border-radius: 5px;
		border-radius: 5px;

		-moz-box-shadow: 0 0 5px #888;
		-webkit-box-shadow: 0 0 5px#888;
		box-shadow: 0 0 5px #888;
	}

	.sign-in-wrap p {
		font-family: "HelveticaNeue-Light:", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
		font-weight: 300;
		font-size: 19pt;
		width: 200px;
		text-align: center;
		margin: 0 auto;
	}

	.sign-in-wrap form {
		text-align: center;
		margin: 0;
	}

	.sign-in-wrap form .hug {
		/*background-color: red;*/
	}

	.sign-in-wrap input[type="text"] {
		margin-top: 20px;
	}

	.sign-in-wrap input[type="text"],
	.sign-in-wrap input[type="password"] {
		font-size: 16px;
		height: 2em;
	}

	.sign-in-wrap input[type="submit"] {
		margin-top: 10px;
		font-size: 16px;
		height: 2em;
	}

	.resend-password {
		font-family: "HelveticaNeue-Light:", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
		font-weight: 300;
		text-align: center;
	}

	.resend-password a,
	.sign-up a {
		padding: 10px 10px 10px 0;
	}

	.sign-up {
		font-family: "HelveticaNeue-Light:", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
		font-weight: 300;
		text-align: center;
	}

}


.logout {
	font-size: 10em;
	text-align: center;
}

